# module-6-yosuahalim

./: .coverage  .env  README.md  pyproject.toml  test.py
app/: __init__.py
app/controller/pokemon/: pokemon_route.py
app/controller/user/: user_route.py
app/controller/user/schema/: update_user_request.py
app/models/: user.py
app/repositories/: user_repo.py
app/service/: user_service.py
app/utils/: api_response.py
migrations/versions/: a65930279050_add_table_user.py  d6f61048ad8b_add_email_on_table_user.py
tests/: conftest.py
tests/controller/: test_user_controller.py
tests/utils/: test_api_response.py
