[tool.poetry]
name = "module-6-yosuahalim"
version = "0.1.0"
description = ""
authors = ["Yosua <yosua.halim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
poetry-dotenv-plugin = "^0.2.0"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
cryptography = "^42.0.2"
psycopg2 = "^2.9.9"
flask-bcrypt = "^1.0.1"
pydantic = "^2.6.1"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
